--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -45,7 +45,7 @@ Our pricing model is different because we are different - and so are our amazing
 We don't run on AWS. We are not VC controlled. Our products are made in EU - by humans for humans.
 
 #### ⚖️ Compliance
-Our procedures and partner infrastructure are compliant with regulations in each supported territory.
+Our partners infrastructure is compliant with regulations in each supported territory.
 
-<img src="./public/compliance.png" width="90%" />
+<img src="./public/compliance.png" width="80%" />
 
