--- a/docs/docs/demo.mdx
+++ b/docs/docs/demo.mdx
@@ -12,19 +12,19 @@ Let's start with the basics: Exploring our Logs, Metrics and Traces in our stack
 
 <Tabs>
             <Tab label="Logs">
-            #### ⭐ Explore Logs using the native Loki Datasource<br/>
+            ⭐ Explore Logs using the native Loki Datasource<br/>
             <SmoothIframe src="https://demo.arcade.software/GKaq4SJRBPYyCZgoWBoM?embed" height="550px" />
             </Tab>
             <Tab label="Metrics">
-            #### ⭐ Explore Metrics using the native Prometheus/Mimir Datasource<br/>
+            ⭐ Explore Metrics using the native Prometheus/Mimir Datasource<br/>
             <SmoothIframe src="https://demo.arcade.software/r2A4ia93hPs96pyiaFQx?embed" height="550px" />
             </Tab>
             <Tab label="Traces">
-            #### ⭐ Explore Traces using the native Tempo Datasource<br/>
+            ⭐ Explore Traces using the native Tempo Datasource<br/>
             <SmoothIframe src="https://demo.arcade.software/G43G6ja4CHJYpF9rc3V2?embed" height="550px" />
             </Tab>
             <Tab label="Pyroscope">
-            #### ⭐ Explore Profiles using the native Pytoscope Datasource<br/>
+            ⭐ Explore Profiles using the native Pytoscope Datasource<br/>
             <img src="https://github.com/metrico/qryn-docs/assets/1423657/3fe7167e-504a-42c0-bf51-bdb090ce0f6b" width="100%" />
             </Tab>
 </Tabs>
@@ -34,7 +34,7 @@ Not a fan of Grafana? Prefer something ligther and faster to troubleshoot? Enter
 
 <Tabs>
             <Tab label="Gigapipe View">
-            #### ⭐ Explore Logs, Metrics and Traces using Gigapipe View<br/>
+            ⭐ Explore Logs, Metrics and Traces using Gigapipe View<br/>
             <img src="https://user-images.githubusercontent.com/1423657/200136242-f4133229-ee7c-45e0-8228-8734cf56140a.gif" width="100%" />
             </Tab>
 </Tabs>
