--- a/docs/docs/logql.mdx
+++ b/docs/docs/logql.mdx
@@ -4,7 +4,7 @@ import { Tab, Tabs } from 'rspress/theme';
 
 **LogQL** is a _PromQL-inspired_ query language acting like a distributed grep with powerful _filters and aggregations_.
 
-?> _Relax. It's all quite simple once you try it!_
+> _Relax. It's all quite simple once you try it!_
 
 There are just two types of _LogQL_ queries:
 
