--- a/docs/docs/logql.mdx
+++ b/docs/docs/logql.mdx
@@ -4,26 +4,26 @@ import { Tab, Tabs } from 'rspress/theme';
 
 **LogQL** is a _PromQL-inspired_ query language acting like a distributed grep with powerful _filters and aggregations_.
 
-> _Relax. It's all quite simple once you try it!_
+?> _Relax. It's all quite simple once you try it!_
 
 There are just two types of _LogQL_ queries:
 
-  * [Log queries](https://grafana.com/docs/loki/latest/logql/log_queries/) returning the contents of log lines as streams.
-  * [Metric queries](https://grafana.com/docs/loki/latest/logql/metric_queries/) that convert logs into value matrices.
+- [Log queries](https://grafana.com/docs/loki/latest/logql/log_queries/) returning the contents of log lines as streams.
+- [Metric queries](https://grafana.com/docs/loki/latest/logql/metric_queries/) that convert logs into value matrices.
 
 **LogQL** queries combine a mandatory **Stream Selectors** _fetching all relevant logs by fingerprint_, followed by optional **Filter Expressions** _reducing and interpolating the returned dataset_.
 
-
 <Tabs>
-            <Tab label="Log Stream selector">
+  <Tab label="Log Stream Selector">
 
 ## ** Log Stream selector **
 
 The _stream selector_ block is always mandatory and determines which log streams should be included in your query using operators
 
-```
 {app="clickhouse"}
-```
+
+markdown
+Copy code
 
 In this example, logs that have a label `app` matching `clickhouse` will be included in the results
 
@@ -31,51 +31,53 @@ In this example, logs that have a label `app` matching `clickhouse` will be incl
 
 The following label operators are supported in label selectors:
 
-* `= `: equals
-* `!=` : not equals
-* `=~` : regex matches
-* `!~` : regex does not match
+* `=`: equals
+* `!=`: not equals
+* `=~`: regex matches
+* `!~`: regex does not match
 
 #### Examples
 
-Return all log lines for the job systemd-journal
+Return all log lines for the job systemd-journal:
 
-```
 {job="systemd-journal"}
-```
+
+lua
+Copy code
 
 -------
 
-Return all log lines for the unit ssh.service
+Return all log lines for the unit ssh.service:
 
-```
 {unit="ssh.service"}
-```
+
+lua
+Copy code
 
 -------
 
-Return all log lines for the job systemd-journal and the unit cron.service
+Return all log lines for the job systemd-journal and the unit cron.service:
 
-```
 {job="systemd-journal",unit="cron.service"}
-```
+
+sql
+Copy code
 
 -------
 
-Show all log lines for 2 jobs with different names
+Show all log lines for 2 jobs with different names:
 
-```
 {job=~"qryn/systemd-journal|systemd-journal"}
-```
 
--------
+sql
+Copy code
 
-            </Tab>
-            <Tab label="Filter Expression">
-  
+  </Tab>
+  <Tab label="Filter Expression">
+
 ## ** Filter Expression **
 
-Once labels are selected the resulting data is be filtered using filter expressions.
+Once labels are selected the resulting data is filtered using filter expressions.
 
 ### Filter Expressions Operators
 
@@ -88,76 +90,82 @@ The following filter operators are supported in expressions:
 
 #### Examples
 
-Return lines including the text "error"
+Return lines including the text "error":
 
-```
 {job="systemd-journal"} |= "error"
-```
+
+lua
+Copy code
 
 -------
 
-Return lines not including the text "error"
+Return lines not including the text "error":
 
-```
 {job="systemd-journal"} != "error"
-```
+
+sql
+Copy code
 
 -------
 
-Return lines including the text "error" or "info" using regex
+Return lines including the text "error" or "info" using regex:
 
-```
 {job="systemd-journal"} |~ "error|info"
-```
+
+sql
+Copy code
 
 -------
 
-Return lines not including the text "error" or "info" using regex
+Return lines not including the text "error" or "info" using regex:
 
-```
 {job="systemd-journal"} !~ "error|info"
-```
+
+lua
+Copy code
 
 -------
 
-Return lines including the text "error" but not including "info"
+Return lines including the text "error" but not including "info":
 
-```
 {job="systemd-journal"} |= "error" != "info"
-```
+
+sql
+Copy code
 
 -------
 
-Return lines including the text "Invalid user" and including ("default" or "qryn") using regex
+Return lines including the text "Invalid user" and including ("default" or "qryn") using regex:
 
-```
 {job="systemd-journal"} |~ "Invalid user (default|qryn)"
-```
+
+sql
+Copy code
 
 -------
 
-Return lines including the text "status 403" or "status 503" using regex
+Return lines including the text "status 403" or "status 503" using regex:
 
-```
 {job="systemd-journal"} |~ "status [45]03"
-```
 
--------
+sql
+Copy code
 
-We can use operations on both the log **stream selectors** and **filter expressions** to refine them.
+  </Tab>
+</Tabs>
 
-            </Tab>
-            <Tab label="Parser">
-            
-## ** Parser  **
-
-            <Tabs>
-                        <Tab label="Parser Expression">
+<Tabs>
+  <Tab label="Parser Expression">
 
 ### ** Parser Expression **
+
 Parser expressions can parse and extract labels from the log content. Those extracted labels can then be used for filtering using label filter expressions or for metric aggregations without bloating cardinality.
 
+  </Tab>
+  <Tab label="json">
+
 ### ** json **
+
 The json parser operates in two modes:
 
 * without parameters:
@@ -168,65 +176,43 @@ The json parser operates in two modes:
   * Using `| json label="expression"` in your pipeline will extract only the specified json fields to labels. 
   * ```{job="0.6611336793589486_json"} | json my_field="json_field"```
 
+  </Tab>
+  <Tab label="logfmt">
+
 ### ** logfmt **
+
 The logfmt parser extracts any `key=value` pairs from the processed logs.
 
-Example:
+##### Input Example:
 
-##### Input
 * ```YYYY-MM-DDT00:00:00Z ... somelog name=qryn value=123 something=else```
 
-##### LogQL
+##### LogQL:
+
 * ```{type="clickhouse"} |~"somelog" | logfmt```
 
-##### Extracted Labels
+##### Extracted Labels:
+
 * ```{ name: "qryn", value: 123, something: "else" }```
-  
+
+  </Tab>
+  <Tab label="regexp">
+
 ### ** regexp **
+
 The regexp parser operates against log string and requires named groups for matching.
 
 Example: extract a new label named `token` from a string ie: 
+
 ```YYYY-MM-DDT00:00:00Z ... Reserving 1.1Mb of memory```
 
  * ```{type="clickhouse"} |~"Reserving" | regexp "Reserving (?<token>\\d+.\\d+)"```
 
-                        </Tab>
-                        <Tab label="Line Format">
-
-#### ** Line Format **
-Line Format expression allows the re-formatting of parts of a log line. It can extract items from parsed json.
-
-To extract a *parameter* we use "{{}}" to surround it and extract it as the displayed log line as a result. Any thing can be added to this line format, to allow for additional notes or formatting.
-
-```
-{job="0.6611336793589486_json"} | json | line_format "My field : {{my_field}}"
-```
-
-Creates new log lines of the string "My field: VALUE"
-
-                        </Tab>
-                        <Tab label="Label Filter Expression">
-  
-#### ** Label Filter Expression **
-Label filter expression allows filtering log line using their original and extracted labels. It can contain multiple predicates.
-
-A predicate contains a *label identifier*, an *operation* and a *value* to compare the label with.
-
-Label filters work like label matchers and use the same operations (`=`,`!=`,`=~`,`!~`).
-
-```
-{job="0.6611336793589486_json"} | json | my_field="VALUE"
-```
-                        </Tab>
-
-            </Tabs>
-
+  </Tab>
 </Tabs>
 
-
-
 <Tabs>
-            <Tab label="Range Vectors">
+  <Tab label="Range Vectors">
 
 ### ** Range Vectors **
 
@@ -239,46 +225,15 @@ The currently supported `range vector` functions are:
 * `bytes_over_time` : Counts the number of bytes in each log stream in the range
 * `bytes_rate` : Similar to bytes_over_time but converted to number of bytes per second
 
-The folllowing example counts all the log lines within the last five minutes for the Clickhouse job.
+The following example counts all the log lines within the last five minutes for the Clickhouse job.
 
-```
 count_over_time({job=”clickhouse”}[5m])
-```
 
-Extend the example to the per-second rate of all non-timeout errors within the last ten seconds for the job.
+sql
+Copy code
 
-```
-rate( ( {job="clickhouse"} |= "error" != "timeout)[10s] ) )
-```
-
-
-#### Examples
-
-The count of jobs at 1 minutes time intervals
-
-```
-count_over_time({job="systemd-journal"}[1m])
-```
-
--------
-
-The rate of logs per minute. Rate is similar to count_over_time but shows the entries per second.
-
-```
-rate({job="systemd-journal"}[1m])
-```
-
--------
-
-Count of errors at 1h time intervals
-
-```
-count_over_time({job="systemd-journal"} |= "error" [1h])
-```
-
-            </Tab>
-            <Tab label="Range Vectors">
-
+  </Tab>
+  <Tab label="Unwrap">
 
 ### ** Unwrap **
 
@@ -292,17 +247,11 @@ Supported `unwrap range` functions for operating over unwrapped ranges are:
 * `max_over_time(unwrapped-range)`: the maximum value of all points in the specified interval
 * `min_over_time(unwrapped-range)`: the minimum value of all points in the specified interval
 
-#### Examples
+  </Tab>
+</Tabs>
 
-Extract a value from a json log and select a field to unwrap into metrics for visualization:
-```
-avg_over_time({job="0.6611336793589486_json"} | json myField="my_field" | unwrap myField [5s])"
-```
-
-The function extracts the value of `my_field` and aggregates it into an average of `5s` buckets over the given timerange.
-
-            </Tab>
-            <Tab label="Aggregate">
+<Tabs>
+  <Tab label="Aggregate">
 
 ### ** Aggregate **
 
@@ -314,74 +263,19 @@ Like PromQL, LogQL supports a subset of built-in aggregation operators that can 
 * `avg` : Calculate the average of the values from all instance vectors in the range at time
 * `stddev` : Calculate the standard deviation of the values from all instance vectors in the range at time
 * `stdvar` : Calculate the standard variance of the values from all instance vectors in the range at time
-* `count` : Count the number of elements all all instance vectors in the range at time
+* `count` : Count the number of elements all instance vectors in the range at time
 
 #### Examples
 
-Calculate the total of all instance vectors in the range at time
+Calculate the total of all instance vectors in the range at time:
 
-```
 sum(count_over_time({job="systemd-journal"}[1m]))
-```
 
--------
+markdown
+Copy code
 
-Show the minimum value from all instance vectors in the range at time
-
-```
-min(count_over_time({job="systemd-journal"}[1m]))
-```
-
--------
-
-Show the maximum value from all instance vectors in the range at time
-
-```
-max(count_over_time({job="systemd-journal"}[1m]))
-```
-
--------
-
-### Aggregate Group
-
-Convert an instance vector into a range vector organized by unit
-
-#### Examples
-
-Group a single log stream by unit
-
-```
-sum(count_over_time({job="systemd-journal"}[1m])) by (unit)
-```
-
--------
-
-Group multiple log streams by job
-
-```
-sum(count_over_time({job=~"qryn/systemd-journal|systemd-journal"}[1m])) by (job)
-```
-
--------
-
-Group multiple log streams and specific unit by job
-
-```
-sum(count_over_time({job=~"qryn/systemd-journal|systemd-journal", unit="cron.service"}[1m])) by (job)
-```
-
--------
-
-Group multiple log streams by job and unit
-
-```
-sum(count_over_time({job=~"qryn/systemd-journal|systemd-journal"}[1m])) by (job,unit)
-```
-
--------
-
-            </Tab>
-            <Tab label="Comparison Ops">
+  </Tab>
+  <Tab label="Comparison Ops">
 
 ### ** Comparison Ops **
 
@@ -390,57 +284,20 @@ Comparison Operators. Used for testing numeric values present in scalars and vec
 * `==` : equal
 * `!=` : not equal
 * `>` : greater than
-* `>=` : greater than or equal to)
+* `>=` : greater than or equal to
 * `<` : less than
 * `<=` : less than or equal to
 
-#### Examples
-
-Returns values greater than 4
-
-```
-sum(count_over_time({job="systemd-journal"}[1m])) > 4
-```
-
--------
-
-Returns values less than or equal to 1
-
-```
-sum(count_over_time({job="systemd-journal"}[1m])) <= 1
-```
-
--------
-
-            </Tab>
-            <Tab label="Logical Ops">
+  </Tab>
+  <Tab label="Logical Ops">
 
 ### ** Logical Ops **
 
-Operatora can be used to add filter conditions:
+Operators can be used to add filter conditions:
 
 * `and` : Both expressions must be true
 * `or` : Either expression must be true
 
-#### Examples
-
-Returns only values smaller than 20% and smaller than 30%
-
-```
-{job="systemd-journal"} | json | mem > 20 and mem < 30
-```
-
--------
-
-Return only values below 30% or above 80%
-
-```
-{job="systemd-journal"} | json | mem < 30 or mem > 80
-```
-
--------
-
-            </Tab>
-
-
+  </Tab>
 </Tabs>
+
