--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -5,3 +5,9 @@ sidebar: false
 import Docs from '../src/components/docs/Docs'
 
 <Docs />
+
+# About Gigapipe
+
+## Observability
+
+Gigapipe is a comprehensive observability platform designed to unify logs, metrics, and traces in a single, seamless database. Unlike traditional tools that silo data, Gigapipe's all-in-one approach ensures automatic correlation between different data types, enhancing troubleshooting and insight generation for engineering teams.
