--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -7,9 +7,7 @@ import Docs from '../src/components/docs/Docs'
 
 <Docs />
 
-----
-
-## Giga Observability
+## Gigapipe Observability
 
 Gigapipe is a comprehensive observability platform designed to unify logs, metrics, and traces in a single, seamless database. Unlike traditional tools that silo data, Gigapipe's all-in-one approach ensures automatic correlation between different data types, enhancing troubleshooting and insight generation for engineering teams.
 
