--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -7,9 +7,11 @@ import Docs from '../src/components/docs/Docs'
 
 <Docs />
 
+<div style="margin-left: -100px;margin-right: -100px;padding: 0px;">
+
 ## Gigapipe Observability
 
 Gigapipe is a comprehensive observability platform designed to unify logs, metrics, and traces in a single, seamless database. Unlike traditional tools that silo data, Gigapipe's all-in-one approach ensures automatic correlation between different data types, enhancing troubleshooting and insight generation for engineering teams.
 
 
-
+</div>
