--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -11,7 +11,9 @@ import { PackageManagerTabs } from 'rspress/theme';
 
 > Polyglot comes from Greek _polyglōttos_, a combination of **poly** - _"many" or "multi"_ - and **glōtta** for _"language_.
 
-_That's us_. Gigapipe is a Polyglot platform designed around the Observability standards the world already loves 💜
+Gigapipe is a comprehensive observability platform designed to unify logs, metrics, traces and profiles in a single, seamless database. Unlike traditional tools that silo data, Gigapipe's all-in-one approach ensures automatic correlation between different data types, enhancing troubleshooting and insight generation for engineering teams.
+
+Our polyglot observability stack  designed around the Observability standards the world already loves 💜
 
 <img src="./public/giga_team.png" width="250px" alt="Founders" />
 
