--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -11,7 +11,7 @@ import PricingCalculator from '../src/components/pricing/PricingCalculator'
 
 #### 🐣 Early Bird _"All You Can Eat"_ Plans
 
-⚡ All plans feature **unmetered** Logs, Metrics, Traces and Profiles. _The only limit are resources/storage_.
+⚡ All plans feature **unmetered** Logs, Metrics, Traces and Profiles. _The only limit are your plan resources_.
 
 <PricingCalculator />
 
