--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -9,9 +9,10 @@ import PricingCalculator from '../src/components/pricing/PricingCalculator'
 
 # Gigapipe Plans and Options
 
-#### 🐣 Early Bird _"All You Can Eat"_ Plans
+#### 🐣 Early Bird Plans: _"All You Can Eat"_
 
-⚡ All plans feature **unmetered** Logs, Metrics, Traces and Profiles. _The only limit are your plan resources_.
+⚡ All plans feature **unmetered** _Logs, Metrics, Traces and Profiles_. 
+⚡ The only limit are your _plan resources_ and _storage capacity_.
 
 <PricingCalculator />
 
