--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -11,7 +11,7 @@ import PricingCalculator from '../src/components/pricing/PricingCalculator'
 
 #### 🐣 Early Bird Plans: _"All You Can Eat"_
 
-⚡ All plans feature **unmetered** _Logs, Metrics, Traces and Profiles_. 
+⚡ All plans feature **unmetered** _Logs, Metrics, Traces and Profiles_. <br/>
 ⚡ The only limit are your _plan resources_ and _storage capacity_.
 
 <PricingCalculator />
