--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -11,13 +11,13 @@ import PricingCalculator from '../src/components/pricing/PricingCalculator'
 
 #### 🐣 Early Bird Plans: _"All You Can Eat"_
 
-⚡ All plans feature **unmetered** _Logs, Metrics, Traces and Profiles_. <br/>
-⚡ The only limit are your _plan resources_ and _storage capacity_.
+⚡ All plans feature **unmetered** _Logs, Metrics, Traces and Profiles_ <br/>
+⚡ The only limit are your _plan resources_ and _storage capacity_
 
 <PricingCalculator />
 
-> ⚖️ Services are provided under the [Gigapipe Service Terms](/legal)
-
-> 🥡 Multiple services across regions can be combined for HA/Failover
+> 🥡 Multiple services across regions can be combined for High-Availability and Failover
 
 > 🗨️ Need a Custom Configuration or High-Availability? [Contact our Team](https://docs.google.com/forms/d/e/1FAIpQLSeb_eMwgtpbOk0ejAVW7ihKAzkt0WKnLwCQFyHkIzl5DAU2ig/viewform)
+
+> ⚖️ Services are provided by Gigapipe and its partners under the [Gigapipe Service Terms](/legal)
