--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -98,6 +98,12 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
 
       ... and since there's nothing new to learn, the Team can just focus on _data._ **Whoo-hoo!** 🎉 
 
+      ##### Advanced Features
+
+      Dealing with a high-cardinality dataset? Keep your performance in check with our advanced options.
+
+      <img src="https://i.imgur.com/jFdviGB.png" />
+
       <img src="giga_quotes.png" width="150px" />
 
 </Steps>
