--- a/docs/signup.mdx
+++ b/docs/signup.mdx
@@ -9,7 +9,7 @@ import EarlyAccessForm from '../src/components/signup/EarlyAccessForm'
 
 # Request Early Access to Gigapipe
 
-> In order to retain maximum service quality and avoid abuse we vet new activations
+> _Please use you business details. Non business contacts might be rejected._
 
 <EarlyAccessForm />
 
