--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -13,7 +13,7 @@ import { PackageManagerTabs } from 'rspress/theme';
 
 <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7134953034576502786?compact=1" height="399" width="710" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
 
-Gigapipe is a comprehensive observability platform designed to unify logs, metrics, traces and profiles in a single, seamless database. Unlike traditional tools that silo data, Gigapipe's all-in-one approach ensures automatic correlation between different data types, enhancing troubleshooting and insight generation for engineering teams.
+Gigapipe qryn is a comprehensive observability platform designed to unify logs, metrics, traces and profiles in a single, seamless database. Unlike traditional tools that silo data, Gigapipe's all-in-one approach ensures automatic correlation between different data types, enhancing troubleshooting and insight generation for engineering teams.
 
 Our polyglot observability stack  designed around the Observability standards the world already loves 💜
 
@@ -21,7 +21,7 @@ Our polyglot observability stack  designed around the Observability standards th
 
 <br/> <br/>
 
-#### ☝️ Why did we create Gigapipe? 
+#### ☝️ Why did we create [qryn](https://qryn.dev) and Gigapipe? 
 
 > _We needed a powerful all-in-one Observability stack and wanted to learn, so we made one for everyone!_
 
