--- a/docs/signup.mdx
+++ b/docs/signup.mdx
@@ -7,9 +7,9 @@ nextPage: false
 
 import EarlyAccessForm from '../src/components/signup/EarlyAccessForm'
 
-# Request Early Access to Gigapipe
+# Gigapipe Early Access Form
 
-> _Please use you business details. Non business contacts might be rejected._
+> _Please use you business details to receive an invite. Non business contacts might be rejected._
 
 <EarlyAccessForm />
 
