--- a/docs/signup.mdx
+++ b/docs/signup.mdx
@@ -7,10 +7,10 @@ nextPage: false
 
 import EarlyAccessForm from '../src/components/signup/EarlyAccessForm'
 
-# Gigapipe Early Access Form
+# 🍳 Gigapipe Early Access
 
 > _Please use you business details to receive an invite. Non business contacts might be rejected._
 
 <EarlyAccessForm />
 
-> 🗨️ Urgent Activation Request? [Contact our Team](mailto:info@gigapipe.com) for Express Intakes
+> 🗨️ Urgent Activation Request? [Contact our Team](mailto:info@gigapipe.com) for express handling
