--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -21,11 +21,11 @@ Our polyglot observability stack  designed around the Observability standards th
 
 <br/> <br/>
 
-#### ☝️ Why did we create [qryn](https://qryn.dev) and Gigapipe? 
+#### ☝️ Why did we create Gigapipe? 
 
-> _We needed a powerful all-in-one Observability stack and wanted to learn, so we made one for everyone!_
+> _We needed a powerful all-in-one Observability stack and wanted to learn, so we made [qryn](https://qryn.dev) for everyone!_
 
-Let's take it back to the _pre-cloud era_. Our product goals and principles are simple:
+Let's take things back to the _pre-cloud era_. Our product goals and principles are simple:
 
 ✔️ We don't like metered solutions. Our plans are unlimited.<br/>
 ✔️ We don't like dynamic pricing. Our service costs are fixed.<br/>
