--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -9,10 +9,10 @@ import PricingCalculator from '../src/components/pricing/PricingCalculator'
 
 # Gigapipe Plans and Options
 
-#### 🐣 Early Bird Plans: _"All You Can Eat"_
+#### 🐣 Early Bird Plans: _"all you can eat"_
 
-⚡ All plans feature **unmetered** _Logs, Metrics, Traces and Profiles_ <br/>
-⚡ The only limit are your _plan resources_ and _storage capacity_
+⚡ All plans feature **unmetered** usage for _Logs, Metrics, Traces and Profiles_ <br/>
+♻️ Data is automatically rotated based on storage. Queries are limited by available CPU/RAM._
 
 <PricingCalculator />
 
