--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -16,8 +16,8 @@ import PricingCalculator from '../src/components/pricing/PricingCalculator'
 
 <PricingCalculator />
 
-> 🥡 Multiple services across regions can be combined for High-Availability and Failover
+🗨️ We keep it simple. Need a custom configurations or multiple hosts? [Contact us for more options](/signup)
 
-> 🗨️ Need a Custom Configuration or High-Availability? [Contact our Team](https://docs.google.com/forms/d/e/1FAIpQLSeb_eMwgtpbOk0ejAVW7ihKAzkt0WKnLwCQFyHkIzl5DAU2ig/viewform)
+> 🥡 Multiple services across regions can be combined for High-Availability and Failover
 
 > ⚖️ Services are provided by Gigapipe and its partners under the [Gigapipe Service Terms](/legal)
