--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -12,12 +12,12 @@ import PricingCalculator from '../src/components/pricing/PricingCalculator'
 #### 🐣 Early Bird Plans: _"all you can eat"_
 
 ⚡ All plans feature **unmetered** usage for _Logs, Metrics, Traces and Profiles_ <br/>
-♻️ Data is automatically rotated based on storage. Queries are limited by available CPU/RAM._
+♻️ Data is automatically rotated based on storage. Queries are limited by available CPU/RAM._<br/>
+🗨️ We keep it simple. Need a custom configurations or multiple hosts? [Contact us](/signup)
 
 <PricingCalculator />
 
-🗨️ We keep it simple. Need a custom configurations or multiple hosts? [Contact us for more options](/signup)
 
-> 🥡 Multiple services across regions can be combined for High-Availability and Failover
+> 🥡 Multiple services across regions can be freely combined for High-Availability and Failover
 
 > ⚖️ Services are provided by Gigapipe and its partners under the [Gigapipe Service Terms](/legal)
