--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -13,10 +13,10 @@ import PricingCalculator from '../src/components/pricing/PricingCalculator'
 
 ⚡ All plans feature **unmetered** usage for _Logs, Metrics, Traces and Profiles_ <br/>
 ♻️ Data is automatically rotated based on storage. Queries are limited by available CPU/RAM._<br/>
-🗨️ We keep it simple. Need a custom configurations or multiple hosts? [Contact us](/signup)
 
 <PricingCalculator />
 
+> 🗨️ We keep it simple. Need a custom configurations or multiple hosts? [Contact us](/signup)
 
 > 🥡 Multiple services across regions can be freely combined for High-Availability and Failover
 
