--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -16,7 +16,7 @@ import PricingCalculator from '../src/components/pricing/PricingCalculator'
 
 <PricingCalculator />
 
-> 🗨️ We keep it simple. Need a custom configurations or multiple hosts? [Contact us](/signup)
+> 🗨️ We keep it simple. Need a custom configurations or multiple hosts? [Contact our Team](/signup)
 
 > 🥡 Multiple services across regions can be freely combined for High-Availability and Failover
 
