--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -12,7 +12,7 @@ import PricingCalculator from '../src/components/pricing/PricingCalculator'
 #### 🐣 Early Bird Plans: _"all you can eat"_
 
 ⚡ All plans feature **unmetered** usage for _Logs, Metrics, Traces and Profiles_ <br/>
-♻️ _Data automatically rotated based on storage. Queries only limited by available CPU/RAM._<br/>
+♻️ _Data automatically rotated based on storage. Queries only limited by vCPU/RAM_<br/>
 
 <PricingCalculator />
 
