--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -11,8 +11,8 @@ import PricingCalculator from '../src/components/pricing/PricingCalculator'
 
 #### 🐣 Early Bird Plans: _"all you can eat"_
 
-⚡ All plans feature **unmetered** usage for _Logs, Metrics, Traces and Profiles_ <br/>
-♻️ _Data automatically rotated based on storage. Queries only limited by vCPU/RAM_<br/>
+⚡ All plans feature **unmetered** ingestion and usage for _Logs, Metrics, Traces and Profiles_ <br/>
+♻️ _Data automatically rotated based on storage, queries limited by available vCPU/RAM_<br/>
 
 <PricingCalculator />
 
