--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -9,4 +9,4 @@ import Docs from '../src/components/docs/Docs'
 
 ## Gigapipe Observability
 
-Gigapipe is a comprehensive observability platform designed to unify logs, metrics, and traces in a single, seamless database. Unlike traditional tools that silo data, Gigapipe's all-in-one approach ensures automatic correlation between different data types, enhancing troubleshooting and insight generation for engineering teams.
+Gigapipe is a comprehensive observability platform designed to unify logs, metrics, and traces under a single, lightspeed seamless OLAP database. Unlike traditional tools that silo data or use custom formats, Gigapipe's all-in-one approach ensures automatic correlation between different data types, enhancing troubleshooting and insight generation for engineering teams.
