--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -9,4 +9,6 @@ import Docs from '../src/components/docs/Docs'
 
 ## Gigapipe Observability
 
-Gigapipe is a comprehensive observability platform designed to unify logs, metrics, and traces under a single, lightspeed OLAP database. Unlike traditional tools that silo data and use multiple components, Gigapipe's all-in-one approach allows correlation between different data types, enhancing troubleshooting and insight generation for engineering teams.
+Gigapipe is a comprehensive observability platform designed to unify logs, metrics, and traces under a single, lightspeed OLAP database. 
+
+Unlike traditional observability tools that silo data and require multiple components, Gigapipe's all-in-one approach allows correlation between different data types and formats, enhancing troubleshooting and insight generation for engineering teams.
