--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -23,7 +23,7 @@ Our polyglot observability stack  designed around the Observability standards th
 
 #### ☝️ Why did we create Gigapipe? 
 
-> _We needed a powerful all-in-one Observability stack and wanted to learn, so we made [qryn](https://qryn.dev) for everyone!_
+> _We needed a powerful all-in-one Observability stack with fast OLAP queries - so we made [qryn](https://qryn.dev)_
 
 Let's take things back to the _pre-cloud era_. Our product goals and principles are simple:
 
