--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -7,7 +7,7 @@ import Docs from '../src/components/docs/Docs'
 
 <Docs />
 
-## Gigapipe Observability
+# Gigapipe Observability
 
 Gigapipe is a comprehensive observability platform designed to unify logs, metrics, and traces under a single, lightspeed OLAP database. 
 
