--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -7,9 +7,11 @@ import Docs from '../src/components/docs/Docs'
 
 <Docs />
 
-<br /> <br />
+<br /> 
 
-# Gigapipe Observability
+<br />
+
+# 🔮 Gigapipe Observability
 
 Gigapipe is a comprehensive observability platform designed to unify logs, metrics, and traces under a single, lightspeed OLAP database. 
 
