--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -15,4 +15,4 @@ import Docs from '../src/components/docs/Docs'
 
 Gigapipe is a comprehensive observability platform designed to unify logs, metrics, and traces under a single, lightspeed OLAP database. 
 
-Unlike traditional observability tools that silo data and require multiple components, Gigapipe's all-in-one approach allows correlation between different data types and formats, enhancing troubleshooting and insight generation for engineering teams.
+Unlike traditional observability tools that silo data and require multiple components, Gigapipe's all-in-one approach allows correlation between different data types and formats, enhancing troubleshooting and insight generation for engineering teams, devops and business intelligence.
