--- a/docs/signup.mdx
+++ b/docs/signup.mdx
@@ -9,7 +9,7 @@ import EarlyAccessForm from '../src/components/signup/EarlyAccessForm'
 
 # 🍳 Gigapipe Early Access
 
-> _Please fill in you business details to receive an invitation._
+> _Please fill in you business details to receive an invitation 🎉_
 
 <EarlyAccessForm />
 
