--- a/docs/signup.mdx
+++ b/docs/signup.mdx
@@ -7,7 +7,7 @@ nextPage: false
 
 import EarlyAccessForm from '../src/components/signup/EarlyAccessForm'
 
-# 🍳 Early Access to Gigapipe [flat plans](/pricing)
+# 🍳 Request Early Access to [Gigapipe](/pricing)
 
 > _Please fill in you business details to receive an invitation 🎉_
 
