--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,6 +1,8 @@
 ---
 sidebar: false
 outline: false
+title: Gigapipe: Polyglot Observability
+description: Gigapipe is a polyglot  observability platform designed to unify logs, metrics, and traces
 ---
 
 import Docs from '../src/components/docs/Docs'
