--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,8 +1,6 @@
 ---
 sidebar: false
 outline: false
-title: Gigapipe: Polyglot Observability
-description: Gigapipe is a polyglot  observability platform designed to unify logs, metrics, and traces
 ---
 
 import Docs from '../src/components/docs/Docs'
@@ -15,8 +13,8 @@ import Docs from '../src/components/docs/Docs'
 
 <br />
 
-# 🔮 Gigapipe Observability
+# 🔮 Gigapipe Observability 
 
-Gigapipe is a comprehensive observability platform designed to unify logs, metrics, and traces under a single, lightspeed OLAP database. 
+Gigapipe is a polyglot observability platform designed to unify logs, metrics, and traces under a single, lightspeed OLAP database. 
 
 Unlike traditional observability tools that silo data and require multiple components, Gigapipe's all-in-one approach allows correlation between different data types and formats, enhancing troubleshooting and insight generation for engineering teams, devops and business intelligence.
