--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,10 +1,11 @@
 ---
 sidebar: false
 outline: false
-footer: true
+footer: false
 ---
 
 import Docs from '../src/components/docs/Docs'
+import Docs from '../src/components/footer/Footer'
 
 <Docs />
 
@@ -19,3 +20,5 @@ import Docs from '../src/components/docs/Docs'
 Gigapipe is a polyglot observability platform designed to unify logs, metrics, and traces under a single, lightspeed OLAP database. 
 
 Unlike traditional observability tools that silo data and require multiple components, Gigapipe's all-in-one approach allows correlation between different data types and formats, enhancing troubleshooting and insight generation for engineering teams, devops and business intelligence.
+
+<Footer />
