--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -5,7 +5,7 @@ footer: false
 ---
 
 import Docs from '../src/components/docs/Docs'
-import Docs from '../src/components/footer/Footer'
+import Footer from '../src/components/footer/Footer'
 
 <Docs />
 
