--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -21,4 +21,6 @@ Gigapipe is a polyglot observability platform designed to unify logs, metrics, a
 
 Unlike traditional observability tools that silo data and require multiple components, Gigapipe's all-in-one approach allows correlation between different data types and formats, enhancing troubleshooting and insight generation for engineering teams, devops and business intelligence.
 
+<img src="/qryn_cloud.png" />
+
 <Footer />
