--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -15,7 +15,7 @@ import Footer from '../src/components/footer/Footer'
 
 <br />
 
-# 🔮 Gigapipe Observability 
+# Gigapipe Observability 🔮 
 
 Gigapipe is a polyglot observability platform designed to unify logs, metrics, and traces under a single, lightspeed OLAP database. 
 
