--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -10,6 +10,7 @@ import PricingCalculator from '../src/components/pricing/PricingCalculator'
 # Gigapipe Plans and Options
 
 #### 🐣 Early Bird Plans: _"all you can eat"_
+> _hurry up! promotional prices available until 12/2024_
 
 ⚡ All plans feature **unmetered** ingestion and usage for _Logs, Metrics, Traces and Profiles_ <br/>
 ♻️ _Data automatically rotated based on storage, queries limited by available vCPU/RAM_<br/>
