--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -23,4 +23,6 @@ Unlike traditional observability tools that silo data and require multiple compo
 
 <img src="/qryn_cloud.png" alt="qryn_cloud" />
 
+Observe your full stack from cloud infrastructure down to code performance, _the unmetered way_. Check our ["early bird"](/pricing) plans 🐤
+
 <Footer />
