--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -23,6 +23,11 @@ Unlike traditional observability tools that silo data and require multiple compo
 
 <img src="/qryn_cloud.png" alt="qryn_cloud" />
 
-Observe your full stack from cloud infrastructure down to code performance, _the unmetered way_. Check our ["early bird"](/pricing) plans 🐤
+<br>
+
+<p style="text-align: center;">
+Observe your full stack from cloud infrastructure down to code performance, _the unmetered way_.<br/>
+Help yourself to our ["early bird"](/pricing) plans 🐤
+</p>
 
 <Footer />
