--- a/docs/docs/logql.mdx
+++ b/docs/docs/logql.mdx
@@ -73,6 +73,7 @@ sql
 Copy code
 
   </Tab>
+
   <Tab label="Filter Expression">
 
 ## ** Filter Expression **
@@ -162,6 +163,7 @@ Copy code
 Parser expressions can parse and extract labels from the log content. Those extracted labels can then be used for filtering using label filter expressions or for metric aggregations without bloating cardinality.
 
   </Tab>
+
   <Tab label="json">
 
 ### ** json **
@@ -175,8 +177,9 @@ The json parser operates in two modes:
 * with parameters:
   * Using `| json label="expression"` in your pipeline will extract only the specified json fields to labels. 
   * ```{job="0.6611336793589486_json"} | json my_field="json_field"```
-
+  
   </Tab>
+
   <Tab label="logfmt">
 
 ### ** logfmt **
@@ -196,6 +199,7 @@ The logfmt parser extracts any `key=value` pairs from the processed logs.
 * ```{ name: "qryn", value: 123, something: "else" }```
 
   </Tab>
+
   <Tab label="regexp">
 
 ### ** regexp **
@@ -209,9 +213,11 @@ Example: extract a new label named `token` from a string ie:
  * ```{type="clickhouse"} |~"Reserving" | regexp "Reserving (?<token>\\d+.\\d+)"```
 
   </Tab>
+
 </Tabs>
 
 <Tabs>
+
   <Tab label="Range Vectors">
 
 ### ** Range Vectors **
@@ -227,7 +233,7 @@ The currently supported `range vector` functions are:
 
 The following example counts all the log lines within the last five minutes for the Clickhouse job.
 
-count_over_time({job=”clickhouse”}[5m])
+count_over_time({job='clickhouse'}[5m])
 
 sql
 Copy code
