--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -19,6 +19,6 @@ Gigapipe is a polyglot observability platform designed to unify logs, metrics, a
 
 Unlike traditional observability tools that silo data and require multiple components, Gigapipe's all-in-one approach allows correlation between different data types and formats, enhancing troubleshooting and insight generation for engineering teams, devops and business intelligence.
 
-<img src="/qryn_cloud.png" alt="qryn_cloud" />
+<a href="/about"><img src="/qryn_cloud.png" alt="qryn_cloud" /></a>
 
 
