--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -28,10 +28,10 @@ Our polyglot observability stack  designed around the Observability standards th
 
 Let's take things back to the _pre-cloud era_. Our product goals and principles are simple:
 
-✔️ We don't like metered solutions. Our plans are unlimited.<br/>
+✔️ We don't like metered solutions. Our plans are unmetered.<br/>
 ✔️ We don't like dynamic pricing. Our service costs are fixed.<br/>
 ✔️ We don't like vendor lock-ins. Our platform speaks freely.<br/>
-✔️ We don't like monopolies. Our products are not on AWS.
+✔️ We don't like monopolies. Our platform doesn't require AWS.
 
 
 #### 💎 Independence
