--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -31,7 +31,7 @@ Let's take things back to the _pre-cloud era_. Our product goals and principles 
 ✔️ We don't like metered solutions. Our plans are unmetered.<br/>
 ✔️ We don't like dynamic pricing. Our service costs are fixed.<br/>
 ✔️ We don't like vendor lock-ins. Our platform speaks freely.<br/>
-✔️ We don't like monopolies. Our platform doesn't require AWS.
+✔️ We don't like monopolies. Our products need no aws account.
 
 
 #### 💎 Independence
