--- a/docs/docs/demo.mdx
+++ b/docs/docs/demo.mdx
@@ -6,7 +6,7 @@ import { Tab, Tabs } from 'rspress/theme';
 
 ### 👁️‍🗨️ Grafana Explore
 
-You Gigapipe account comes with a _built-in_ **Grafana** instance preconfigured with available datasources.
+Your Gigapipe account comes with a _built-in_ **Grafana** instance preconfigured with available datasources.
 
 Let's start with the basics: Exploring our Logs, Metrics and Traces in our stack
 
