--- a/docs/docs/demo.mdx
+++ b/docs/docs/demo.mdx
@@ -25,7 +25,7 @@ Let's start with the basics: Exploring our Logs, Metrics and Traces in our stack
             </Tab>
             <Tab label="Pyroscope">
             ⭐ Explore Profiles using the native Pytoscope Datasource<br/>
-            <img src="https://github.com/metrico/qryn-docs/assets/1423657/3fe7167e-504a-42c0-bf51-bdb090ce0f6b" width="100%" />
+            <SmoothIframe src="https://demo.arcade.software/xNDuB0hSZ6xGPIpwVP0C?embed" height="550px" />
             </Tab>
 </Tabs>
 
