--- a/docs/grafana-explore.mdx
+++ b/docs/grafana-explore.mdx
@@ -1,28 +1,6 @@
----
-sidebar: false
-outline: false
----
-
-import Docs from '../src/components/docs/Docs'
 import SmoothIframe from '../src/components/SmoothIframe'
 
-<Docs />
-
-<br /> 
-
-<br />
-
-<br />
-
-# Gigapipe Observability 🔮 
-
-Gigapipe is a polyglot observability platform designed to unify logs, metrics, and traces under a single, lightspeed OLAP database. 
-
-Unlike traditional observability tools that silo data and require multiple components, Gigapipe's all-in-one approach allows correlation between different data types and formats, enhancing troubleshooting and insight generation for engineering teams, devops and business intelligence.
-
-<a href="/about"><img src="/qryn_cloud.png" alt="qryn_cloud" /></a>
-
-## Explore Your Data with Ease Using Gigapipe
+# Explore Your Data with Ease Using Gigapipe
 
 Gigapipe is your comprehensive solution for real-time observability, seamlessly integrating into your existing infrastructure for complete visibility into logs, metrics, and traces. It is fully compatible with **Grafana** and even comes with its own custom managed Grafana for every account, enabling software engineers to explore data efficiently. Whether analyzing system health or troubleshooting, Gigapipe delivers the tools you need.
 
@@ -30,18 +8,15 @@ Gigapipe is your comprehensive solution for real-time observability, seamlessly 
 
 Gigapipe acts as a seamless endpoint, mirroring **Loki**, **Tempo**, and **Prometheus** data sources. You can use the custom-managed Grafana instance provided by Gigapipe, where all data sources are pre-configured, or integrate Gigapipe data sources into your current Grafana setup in just a few clicks. Simply add Gigapipe as a Loki, Tempo, or Prometheus data source, and you're ready to go.
 
-
-
-
 ## Robust Support for Query Languages
 
 Gigapipe supports multiple query languages, providing flexibility for engineers familiar with industry standards. The table below summarizes the query languages for each observability data type:
 
 | **Observability Data Type** | **Supported Query Language**                  | **Description**                                                   |
 |-----------------------------|-----------------------------------------------|-------------------------------------------------------------------|
-| **Logs**                    | [LogQL](https://grafana.com/docs/loki/latest/logql/) | Used for filtering, parsing, and aggregating logs.               |
-| **Metrics**                 | [PromQL](https://prometheus.io/docs/prometheus/latest/querying/basics/) | Standard query language for metric analysis.                     |
-| **Traces**                  | [Tempo TraceQL](https://grafana.com/docs/tempo/latest/querying/) | Tailored for distributed trace searching and analysis.           |
+| **Logs**                    | [LogQL](https://grafana.com/docs/loki/latest/logql/) | Used for filtering, parsing, and aggregating logs. |
+| **Metrics**                 | [PromQL](https://prometheus.io/docs/prometheus/latest/querying/basics/) | Standard query language for metric analysis. |
+| **Traces**                  | [Tempo TraceQL](https://grafana.com/docs/tempo/latest/querying/) | Tailored for distributed trace searching and analysis. |
 
 Gigapipe ensures robust query execution and visualization, allowing engineers to explore data efficiently using familiar languages.
 
