--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -19,6 +19,8 @@ import PricingCalculator from '../src/components/pricing/PricingCalculator'
 
 > 🗨️ We keep it simple. Need a custom configurations or multiple hosts? [Contact our Team](/signup)
 
-> 🥡 Single node plans may experience momentary downtime in the event of server restarts. However enterprise plans come with high availability options
+> 🥡 Single node plans do not offer High-Availability, Failover or Redundancy and are intended for Development
+
+> 🥡 Multiple services across regions can be freely combined for High-Availability and Failover for Production
 
 > ⚖️ Services are provided by Gigapipe and its partners under the [Gigapipe Service Terms](/legal)
