--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,6 +1,16 @@
 ---
 sidebar: false
 outline: false
+head:
+  - - meta
+    - property: og:title
+      content: Gigapipe: Polyglot Observability
+  - - meta
+    - property: og:url
+      content: https://gigapipe.com
+  - - meta
+    - property: og:image
+      content: https://i.imgur.com/w9MZrzK.png
 ---
 
 import Docs from '../src/components/docs/Docs'
