--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -19,8 +19,7 @@ import PricingCalculator from '../src/components/pricing/PricingCalculator'
 
 > 🗨️ We keep it simple. Need a custom configurations or multiple hosts? [Contact our Team](/signup)
 
-> 🥡 Single node plans do not offer High-Availability, Failover or Redundancy and are intended for Development
-
-> 🥡 Multiple services across regions can be freely combined for High-Availability and Failover for Production
+> 🥡 Single node plans do NOT provide any High-Availability, Failover or Redundancy<br>
+> 🥡 Multiple nodes across regions can be combined for High-Availability, Failover or Redundancy<br>
 
 > ⚖️ Services are provided by Gigapipe and its partners under the [Gigapipe Service Terms](/legal)
