--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -19,7 +19,8 @@ import PricingCalculator from '../src/components/pricing/PricingCalculator'
 
 > 🗨️ We keep it simple. Need a custom configurations or multiple hosts? [Contact our Team](/signup)
 
-> 🥡 Single node plans do NOT provide any High-Availability, Failover or Redundancy<br>
-> 🥡 Multiple nodes across regions can be combined for High-Availability, Failover or Redundancy<br>
+> 🥡 Single node plans do NOT provide any High-Availability, Failover or Redundancy
+
+> 🥡 Multiple nodes across regions can be combined for High-Availability, Failover or Redundancy
 
 > ⚖️ Services are provided by Gigapipe and its partners under the [Gigapipe Service Terms](/legal)
