--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -23,35 +23,39 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
       <Tabs>
             <Tab label="Logs">
             ⭐ Use any Loki compatible Agent or Client<br/><br/>
-            📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/) 
-            📦 [Grafana Agent](https://grafana.com/docs/agent/latest/) 
-            📦 [Vector](https://vector.dev/) 
-            📦 [Opentelemetry](https://github.com/metrico/otel-collector) 
-            📦 [Telegraf](https://www.influxdata.com/time-series-platform/telegraf/) 
-            📦 [Fluentd](https://www.fluentd.org/) 
-            📦 [Logstash](https://opensearch.org/docs/latest/tools/logstash/index/)
+            📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/) <br/>
+            📦 [Grafana Agent](https://grafana.com/docs/agent/latest/) <br/>
+            📦 [Vector](https://vector.dev/) <br/>
+            📦 [Opentelemetry](https://github.com/metrico/otel-collector) <br/>
+            📦 [Telegraf](https://www.influxdata.com/time-series-platform/telegraf/) <br/>
+            📦 [Fluentd](https://www.fluentd.org/) <br/>
+            📦 [Logstash](https://opensearch.org/docs/latest/tools/logstash/index/)<br/>
             
             </Tab>
             <Tab label="Metrics">
             ⭐ Use any Prometheus compatible Agent or Client<br/><br/>
-            📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/) 
-            📦 [Grafana Agent](https://grafana.com/docs/agent/latest/) 
-            📦 [Vector](https://vector.dev/) 
-            📦 [Opentelemetry](https://github.com/metrico/otel-collector)
+            📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/) <br/>
+            📦 [Grafana Agent](https://grafana.com/docs/agent/latest/) <br/>
+            📦 [Vector](https://vector.dev/) <br/>
+            📦 [Opentelemetry](https://github.com/metrico/otel-collector)<br/>
             
             </Tab>
             <Tab label="Traces">
             ⭐ Use any Tempo/Zipkin compatible Agent or Client<br/><br/>
-            📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/) 
-            📦 [Grafana Agent](https://grafana.com/docs/agent/latest/) 
-            📦 [Zipkin](https://zipkin.io/) 
-            📦 [Opentelemetry](https://github.com/metrico/otel-collector)
+            📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/) <br/>
+            📦 [Grafana Agent](https://grafana.com/docs/agent/latest/) <br/>
+            📦 [Zipkin](https://zipkin.io/) <br/>
+            📦 [Opentelemetry](https://github.com/metrico/otel-collector)<br/>
             
             </Tab>
             <Tab label="Profiles">
             ⭐ Use any Pyroscope SDK compatible Agent or Client<br/><br/>
-            📦 [Grafana Pyroscope SDK](https://grafana.com/docs/pyroscope/latest/configure-client/language-sdks/) 
-            📦 [Grafana Agent](https://grafana.com/docs/pyroscope/latest/configure-client/grafana-agent/go_pull/) 
+            📦 [Grafana Pyroscope SDK](https://grafana.com/docs/pyroscope/latest/configure-client/language-sdks/) <br/>
+            📦 [Grafana Agent](https://grafana.com/docs/pyroscope/latest/configure-client/grafana-agent/go_pull/) <br/>
+            
+            </Tab>
+            <Tab label="Opentelemetry">
+            ⭐ Use the Gigapipe Opentelemtry distrubution or any OTel instance with native protocols<br/><br/>
             
             </Tab>
       </Tabs>
