--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -9,11 +9,9 @@ import PricingCalculator from '../src/components/pricing/PricingCalculator'
 
 # Gigapipe Plans and Options
 
-#### 🐣 Early Bird Plans: _"all you can eat"_
-> _hurry up and grab a seat! promotional prices available until 03/2025 🎄_
-
+#### 🐣 Early Bird _"all you can eat"_ plans
 ⚡ All plans feature **unmetered** ingestion and usage for _Logs, Metrics, Traces and Profiles_ <br/>
-♻️ _Data automatically rotated based on storage, queries limited by available vCPU/RAM_<br/>
+♻️ _Data is automatically rotated based on free storage. Queries limited by plan vCPU/RAM_<br/>
 
 <PricingCalculator />
 
