--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -11,14 +11,16 @@ import PricingCalculator from '../src/components/pricing/PricingCalculator'
 
 #### 🐣 Early Bird _"all you can eat"_ plans
 ⚡ All plans feature **unmetered** ingestion and usage for _Logs, Metrics, Traces and Profiles_ <br/>
-♻️ _Data is automatically rotated based on free storage. Queries limited by plan vCPU/RAM_<br/>
 
 <PricingCalculator />
 
 > 🗨️ We keep it simple. Need a custom configurations or multiple hosts? [Contact our Team](/signup)
 
-> 🥡 Single node plans do NOT provide any High-Availability, Failover or Redundancy
+#### 🐣 Service Details
 
-> 🥡 Multiple nodes across regions can be combined for High-Availability, Failover or Redundancy
+- 🥡 Single node plans do *not* feature High-Availability, Failover or Redundancy
+- 🥡 Multiple nodes can be combined for High-Availability, Failover or Redundancy
+- ♻️ Data is automatically ingested, compressed and rotated based on free storage. 
+- ♻️ Query usage and speed might be temporarily affected by available node vCPU/RAM_.
 
 > ⚖️ Services are provided by Gigapipe and its partners under the [Gigapipe Service Terms](/legal)
