--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -41,12 +41,12 @@ Our core engine and APIs are all developed from scratch _("clear room")_ and _co
 
 #### ⚡ Performance
 
-Our stack uses **ClickHouse** + **DuckDB** OLAP engines w/ NVMe storage for fast analytics & scalable performance. <br/>
+Our stack uses **ClickHouse** + **DuckDB** OLAP engines w/ NVMe storage for fast analytics & scalable performance. 
 We develop our data engines and database extensions standing on the shoulders of giants.
 
 #### 🍖 Underdog-ness
 
-Our pricing model is different because we are different - and so are our amazing dedicated hosting and VPS partners. <br/>
+Our pricing model is different because we are different - and so are our amazing dedicated hosting and VPS partners. 
 We don't run on AWS. We are not VC controlled. Our products are made in EU - by humans for humans.
 
 #### ⚖️ Compliance
