--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -47,7 +47,7 @@ We develop our stack and extensions standing on the shoulders of giants.
 #### 🍖 Underdog-ness
 
 Our pricing model is different because we are different - and so are our amazing dedicated hosting and VPS partners. 
-We don't run on AWS. We are not VC controlled. Our products are made by humans for humans.
+We don't use AWS. We are not VC controlled. We are made by humans for humans.
 
 #### ⚖️ Compliance
 Our partners infrastructure is compliant with regulations in each supported territory.
