--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -36,18 +36,19 @@ Let's take things back to the _pre-cloud era_. Our product goals and principles 
 
 #### 💎 Independence
 
-Our stack is _protocol compatible_ with many projects and products - _without depending on any_. <br/>
-Our core engine and APIs are all developed from scratch _("clear room")_ and _completely opensource_.
+Gigapipe is _protocol compatible_ with many projects and products - _without depending on any_. <br/>
+Our core engine and APIs are all developed from scratch _("clear room")_ and _opensource_.<br/>
+Our APIs are drop-in compatible with Loki, Prometheus, Tempo, Pyroscpe and Opentelemetry.
 
 #### ⚡ Performance
 
 Our stack uses **ClickHouse** + **DuckDB** OLAP engines w/ NVMe storage for fast analytics & scalable performance. 
-We develop our stack and extensions standing on the shoulders of giants.
+We develop our stack and extensions confendtly standing on the shoulders of giants.
 
 #### 🍖 Underdog-ness
 
 Our pricing model is different because we are different - and so are our amazing dedicated hosting and VPS partners. 
-We don't use AWS. We are not VC controlled. We are made by humans for humans.
+We don't use AWS. We are not controlled by VC greed. We are made by humans for humans.<br/>
 
 #### ⚖️ Compliance
 Our partners infrastructure is compliant with regulations in each supported territory.
