--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -20,7 +20,7 @@ import PricingCalculator from '../src/components/pricing/PricingCalculator'
 
 - 🥡 Single node plans do *not* feature High-Availability, Failover or Redundancy
 - 🥡 Multiple nodes can be combined for High-Availability, Failover or Redundancy
-- ♻️ Data is automatically ingested, compressed and rotated based on free storage. 
-- ♻️ Query usage and speed might be temporarily affected by available node vCPU/RAM_.
+- ♻️ Data is automatically ingested, compressed and rotated based on free storage
+- ♻️ Query usage and speed might be temporarily affected by your available _vCPU/RAM_
 
 > ⚖️ Services are provided by Gigapipe and its partners under the [Gigapipe Service Terms](/legal)
