--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -9,18 +9,27 @@ import PricingCalculator from '../src/components/pricing/PricingCalculator'
 
 # Gigapipe Plans and Options
 
-#### 🐣 Early Bird _"all you can eat"_ plans
-⚡ All plans feature **unmetered** ingestion and usage for _Logs, Metrics, Traces and Profiles_ <br/>
+#### 🐣 _"All you can Eat"_ Plans
+
+We keep life simple: Gigapipe plans are _cost-locked_ and usage is unmetered.<br/>
+The only limitation are your plan's resources _(storage/cpu/etc) ♮_
 
 <PricingCalculator />
 
-> 🗨️ We keep it simple. Need a custom configurations or multiple hosts? [Contact our Team](/signup)
+> 🗨️ Need a custom configurations or multiple hosts? [Contact our Team](/signup)
 
-#### 🐣 Service Details
+#### 🐣 Service Capacity
 
-- 🥡 Single node plans do *not* feature High-Availability, Failover or Redundancy
-- 🥡 Multiple nodes can be combined for High-Availability, Failover or Redundancy
-- ♻️ Data is automatically ingested, compressed and rotated based on free storage
-- ♻️ Query usage and speed might be temporarily affected by your available _vCPU/RAM_
+- ⚡ **Unmetered** ingestion for _Logs, Metrics, Traces and Profiles_ 
+  - ♻️ data is automatically rotated when free storage is < 90%
+  - ♮ 1TB space w/ 500GB of ingestion/month = 2 months of retention
+- ⚡ **Unlimited** query access to _Logs, Metrics, Traces and Profiles_
+  - ♻️ query speed and performance are limited by the node _vCPU/RAM_
+  - ♮ services might degrade when overloaded - _add node(s) or upgrade_
+
+#### 🐣 Service Availability
+
+- ❎ Single node plans do *not* feature High-Availability, Failover or Redundancy
+- ✅ Multiple nodes can be combined for High-Availability, Failover or Redundancy
 
 > ⚖️ Services are provided by Gigapipe and its partners under the [Gigapipe Service Terms](/legal)
